--- a/package.json
+++ b/package.json
@@ -10,12 +10,40 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^2.0.2",
+    "@react-navigation/bottom-tabs": "^6.2.0",
+    "@react-navigation/elements": "^1.3.1",
+    "@react-navigation/native": "^6.0.7",
+    "@react-navigation/stack": "^6.1.1",
+    "@reduxjs/toolkit": "^1.7.1",
+    "axios": "^0.25.0",
+    "dotenv": "^14.3.2",
     "expo": "~44.0.0",
+    "expo-location": "^14.0.1",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-elements": "^3.4.2",
+    "react-native-geocoding": "^0.5.0",
+    "react-native-geolocation-service": "^5.3.0-beta.4",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-maps": "0.30.1",
+    "react-native-maps-directions": "^1.8.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
+    "react-native-svg": "^12.1.1",
+    "react-native-vector-icons": "^9.0.0",
+    "react-native-web": "0.17.1",
+    "react-navigation": "^4.4.4",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.1",
+    "tailwind-react-native-classnames": "^1.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
